--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,22 +1,28 @@
-{% extends "base.html" %} {% block title %}Home{% endblock %} {% block content
-%}
-<h2 class="mb-3 mt-3">Mis notas</h2>
-<ul class="list-group list-group-flush mb-3" id="notes">
-  {% for note in user.notes %}
-  <li class="list-group-item">
-    {{note.data}}
-    <button
-      type="button"
-      class="btn-close mx-3"
-      aria-label="Close"
-      onclick="deleteNote({{ note.id }})"
-    ></button>
-  </li>
-  {% endfor %}
-</ul>
-<form action="" method="POST">
-  <textarea name="note" id="note" cols="30" rows="10" class="form-control">
-  </textarea>
-  <button type="submit" class="btn btn-primary mt-3">Enviar</button>
-</form>
+<!-- prettier-ignore -->
+{% extends "base.html" %}
+{% block title %}Mis gastos{% endblock %} 
+{% block content %}
+<h2 class="mb-3 mt-3">Mis Gastos</h2>
+<a href="/create" class="btn btn-primary mb-3">Agregar gasto</a>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Fecha</th>
+      <th>Descripcion</th>
+      <th>Categoria</th>
+      <th>Monto</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for spent in current_user.spents %}
+    <tr>
+      <td>{{ spent.date.strftime("%d-%m-%Y") }}</td>
+      <td>{{ spent.description }}</td>
+      <td>{{ spent.category }}</td>
+      <td>{{ spent.amount }}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
 {% endblock %}
