--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} {% block title%}Sign up page{% endblock %} {% block
 content %}
 <form action="" method="post">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
   <h3 align="center" class="mt-3 mb-3">Sign Up</h3>
   <div class="mb-3">
     <label for="email">Email</label>
