--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -17,21 +17,21 @@
     </tr>
   </thead>
   <tbody>
-    {% for spent in current_user.spents %}
+    {% for spent in spents %}
     <tr>
       <td>{{ spent.date.strftime("%d-%m-%Y") }}</td>
       <td>{{ spent.description }}</td>
       <td>{{ spent.category }}</td>
       <td>{{ '%.2f'|format(spent.amount) }}</td>
-      <td>
-        <a href="/edit/{{spent.id}}" class="btn btn-info">Editar</a>|
+      <td style="display: flex; gap: 10px">
+        <a href="/edit/{{spent.id}}" class="btn btn-info btn-sm">Editar</a>|
         <form action="{{url_for('views.delete', id=spent.id)}}" method="POST">
           <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
           <input
             type="submit"
             value="Borrar"
             onclick="return confirm('¿Seguro desea borrar esta entrada?')"
-            class="btn btn-danger"
+            class="btn btn-danger btn-sm"
           />
         </form>
       </td>
