--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -2,7 +2,7 @@
 content %}
 <form action="" method="post">
   <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-  <h3 align="center" class="mt-3 mb-3">Login</h3>
+  <h3 style="text-align: center" class="mt-3 mb-3">Login</h3>
   <div class="mb-3">
     <label for="email">Email</label>
     <input
