--- a/website/templates/sign_up.html
+++ b/website/templates/sign_up.html
@@ -2,7 +2,7 @@
 content %}
 <form action="" method="post">
   <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-  <h3 align="center" class="mt-3 mb-3">Sign Up</h3>
+  <h3 style="text-align: center" class="mt-3 mb-3">Sign Up</h3>
   <div class="mb-3">
     <label for="email">Email</label>
     <input
@@ -10,17 +10,17 @@ content %}
       name="email"
       id="email"
       class="form-control"
-      placeholder="Enter email"
+      placeholder="Ingresa email"
     />
   </div>
   <div class="mb-3">
-    <label for="firstName">First Name</label>
+    <label for="firstName">Nombre</label>
     <input
       type="text"
       name="firstName"
       id="firstName"
       class="form-control"
-      placeholder="Enter First Name"
+      placeholder="Ingresa tu nombre"
     />
   </div>
   <div class="mb-3">
@@ -30,7 +30,7 @@ content %}
       name="password1"
       id="password1"
       class="form-control"
-      placeholder="Enter password"
+      placeholder="Ingresa el password"
     />
   </div>
   <div class="mb-3">
@@ -40,10 +40,10 @@ content %}
       name="password2"
       id="password2"
       class="form-control"
-      placeholder="Confirm password"
+      placeholder="Confirmación de password"
     />
   </div>
   <br />
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Aceptar</button>
 </form>
 {% endblock %}
