--- a/website/templates/resumen.html
+++ b/website/templates/resumen.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 {% block title%}Resumen{% endblock %}
 {% block content %}
-<h2 class="mt-3 mb-3">Resumen mensual de gastos</h2>
+<h2 class="mt-3 mb-3">Resumen mensual de {{current_user.first_name}}</h2>
 <div class="card">
   <div class="card-body">
     <div class="card-title">
